# quickImage

./: .gitignore  README.md  pyproject.toml  setup.bat  setup.sh
src/sdcli/: __init__.py  __main__.py  cli.py  config.py  platform_utils.py  workflow.py
src/sdcli/backends/: __init__.py  comfy.py
src/sdcli/commands/: config.py  gen.py  info.py  models.py  server.py
src/sdcli/data/: recommendations.toml
src/sdcli/sources/: civitai.py  huggingface.py
src/sdcli/utils/: download.py  format.py  io.py
src/sdcli/workflows/: img2img.json  txt2img.json
